--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="/joule-site-institucional/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.E9OTf7Zv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.MYUubKaf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.o7qmsMtW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.kuiScXvQ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.uOiP6Md2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.e9_YjKr-.js">
+		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/entry/start.dHxXmTq2.js">
+		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/entry.81jD2tTT.js">
+		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/scheduler.o7qmsMtW.js">
+		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/index.kuiScXvQ.js">
+		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/entry/app.FSAZr64T.js">
+		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/index.e9_YjKr-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1wrb57e = {
-						base: ""
+					__sveltekit_28hhjz = {
+						base: "/joule-site-institucional",
+						assets: "/joule-site-institucional"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.E9OTf7Zv.js"),
-						import("/_app/immutable/entry/app.uOiP6Md2.js")
+						import("/joule-site-institucional/_app/immutable/entry/start.dHxXmTq2.js"),
+						import("/joule-site-institucional/_app/immutable/entry/app.FSAZr64T.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
