--- a/404.html
+++ b/404.html
@@ -2,30 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/joule-site-institucional/favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/entry/start.Gx08ju-h.js">
-		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/entry.4UCAE_Eb.js">
-		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/scheduler.o7qmsMtW.js">
-		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/index.kuiScXvQ.js">
-		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/entry/app.86a0V714.js">
-		<link rel="modulepreload" href="/joule-site-institucional/_app/immutable/chunks/index.e9_YjKr-.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.jm1v7Aay.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.EPHwitlF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.o7qmsMtW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.kuiScXvQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.yr55Tt1f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.e9_YjKr-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1db7dx1 = {
-						base: "/joule-site-institucional",
-						assets: "/joule-site-institucional"
+					__sveltekit_9js3jn = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/joule-site-institucional/_app/immutable/entry/start.Gx08ju-h.js"),
-						import("/joule-site-institucional/_app/immutable/entry/app.86a0V714.js")
+						import("/_app/immutable/entry/start.jm1v7Aay.js"),
+						import("/_app/immutable/entry/app.yr55Tt1f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
