--- a/404.html
+++ b/404.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.jm1v7Aay.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.EPHwitlF.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.-p2MJoi5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ulOol50S.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.o7qmsMtW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.kuiScXvQ.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.yr55Tt1f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.LMVhNfvR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.e9_YjKr-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_9js3jn = {
+					__sveltekit_dfp6hd = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.jm1v7Aay.js"),
-						import("/_app/immutable/entry/app.yr55Tt1f.js")
+						import("/_app/immutable/entry/start.-p2MJoi5.js"),
+						import("/_app/immutable/entry/app.LMVhNfvR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
